--- a/public/css/main.css
+++ b/public/css/main.css
@@ -42,6 +42,15 @@ ul{
     border: 1px solid var(--color-border);
 }
 
+.paidBtn{
+    background-color: #008000;
+    font-size: 1.2rem;
+}
+
+.paidBtn:hover{
+    cursor: default;
+}
+
 .error-msg{
     color: var(--color-danger);
     font-size: 1.4rem;
