--- a/public/css/book.css
+++ b/public/css/book.css
@@ -34,7 +34,7 @@
     list-style: none;
     display: grid;
     grid-gap: 1rem;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
 }
 
 .all-books-container ul li{
