Image lazy loading enabled

--- a/views/bookDetails.ejs
+++ b/views/bookDetails.ejs
@@ -22,6 +22,6 @@
         </form>
     </div>
     <div>
-        <img src="/image/<%= book.filename %>" class="img-fluid">
+        <img src="/image/<%= book.filename %>" class="img-fluid" loading="lazy">
     </div>
 </div>
