--- a/views/bookDetails.ejs
+++ b/views/bookDetails.ejs
@@ -22,6 +22,7 @@
         </form>
     </div>
     <div>
-        <img src="/image/<%= book.filename %>" class="img-fluid" width="200" height="250" loading="lazy">
+        <img src="/image/<%= book.filename %>" alt="Loading..." class="img-fluid" width="200" height="250"
+            loading="lazy">
     </div>
 </div>
