--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -3,6 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="Ebooks for users, by users">
+    <meta name="keywords" content="Buy ebook,ebooks,Online books,pdfs,book,authors">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Gourav Ebooks</title>
