--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -9,6 +9,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Gourav Ebooks</title>
     <link rel="shortcut icon" href="/img/marketplace.jpeg" type="image/x-icon">
+    <link rel="preload" href="/css/main.css" as="style">
+    <link rel="preload" href="/css/book.css" as="style">
+    <link rel="preload" href="/css/navbar.css" as="style">
+    <link rel="preload" href="/css/userAction.css" as="style">
     <link rel="stylesheet" href="/css/main.css">
 </head>
 
