Added .env.sample file and updated README.md with prerequisites and other imp info

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,6 +1,6 @@
 <nav class="header-nav">
     <a href="/" class="header-title">
-        <h3>Gourav Ebooks</h3>
+        <h3>Ebooks-Go-App</h3>
     </a>
     <ul>
         <% if(locals.signedIn == null){
