--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -7,7 +7,7 @@
     <meta name="keywords" content="Buy ebook,ebooks,Online books,pdfs,book,authors">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Gourav Ebooks</title>
+    <title>Ebooks-Go-App</title>
     <link rel="shortcut icon" href="/img/marketplace.jpeg" type="image/x-icon">
     <link rel="preload" href="/css/main.css" as="style">
     <link rel="preload" href="/css/book.css" as="style">
