--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,13 +1,19 @@
 <div class="all-books-container">
-    <h2 class="book-title">Recently Added</h2>
-    <ul>
-        <% books.forEach(book => { %>
-        <li>
-            <img src="/image/<%= book.filename %>" alt="Loading..." class="img-fluid img-small" height="200" width="150"
-                loading="lazy" />
-            <a type="button" class="payBtn" href="/book/show/<%= book.filename %>">View Book</a>
-        </li>
-        <% }) %>
-    </ul>
-
+  <h2 class="book-title">Recently Added</h2>
+  <ul>
+    <% books.forEach(book => { %>
+    <li>
+      <img
+        src="/image/<%= book.filename %>"
+        alt="<%= book.title %>"
+        class="img-fluid img-small"
+        height="200"
+        width="150"
+      />
+      <a type="button" class="payBtn" href="/book/show/<%= book.filename %>">
+        View Book
+      </a>
+    </li>
+    <% }) %>
+  </ul>
 </div>
