--- a/public/css/navbar.css
+++ b/public/css/navbar.css
@@ -1,58 +1,58 @@
-:root{
-    --color-link-dark: hsl(var(--color-base-hue),100%,16%);
+:root {
+  --color-link-dark: hsl(var(--color-base-hue), 100%, 16%);
 }
 
 .header-title {
-    color: var(--color-text-dark);
-    text-decoration: none;
-    outline: none;
-    font-size: 1.5rem;
-    font-weight: bold;
-    flex: 1; /*don't know but worked*/
+  color: var(--color-text-dark);
+  text-decoration: none;
+  outline: none;
+  font-size: 1.5rem;
+  font-weight: bold;
+  flex: 1; /*don't know but worked*/
 }
 
 .header-nav {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
-.header-nav ul{
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    list-style: none;
+.header-nav ul {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  list-style: none;
 }
 
-.header-nav li a{
-    margin-left: 10px;
-    text-decoration: none;
-    color: var(--color-link-dark);
-    border-radius: .25rem;
-    border: 1px solid var(--color-text-dark);
-    padding: 1rem 2rem;
-    outline: none;
-    transition: all 0.4s;
-    font-size: 1.2rem;
+.header-nav li a {
+  margin-left: 10px;
+  text-decoration: none;
+  color: var(--color-link-dark);
+  border-radius: 0.25rem;
+  border: 1px solid var(--color-text-dark);
+  padding: 1rem 2rem;
+  outline: none;
+  transition: all 0.4s;
+  font-size: 1.2rem;
 }
 
-.header-nav li a:hover{
-    background-color: hsl(var(--color-danger-hue),100%,50%);
-    color: white;
+.header-nav li a:hover {
+  background-color: hsl(var(--color-danger-hue), 100%, 50%);
+  color: white;
 }
 
-@media(max-width:500px){
-    .header-nav{
-        flex-direction: column;
-        justify-content: center;
-    }
+@media (max-width: 500px) {
+  .header-nav {
+    flex-direction: column;
+    justify-content: center;
+  }
 
-    .header-nav li a{
-        padding: .7rem 1.1rem;
-        margin-left: 7px;
-    }
-    
-    .header-title{
-        font-size: 1.9rem;
-    }
+  .header-nav li a {
+    padding: 0.7rem 1.1rem;
+    margin-left: 7px;
+  }
+
+  .header-title {
+    font-size: 1.9rem;
+  }
 }
