--- a/public/css/userAction.css
+++ b/public/css/userAction.css
@@ -1,30 +1,32 @@
-.login-page{
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.login-page {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .login-page form {
-    margin-top: 5vh;
-}
-.login-page input{
-    padding: 1rem 1.2rem;
-    font-size: 1.3rem;
-    border: 1px solid var(--color-border);
-    border-radius: .5rem;
-    margin-bottom: .5rem;
-    width: 100%;
+  margin-top: 5vh;
 }
 
-.login-page button{
-    width: 100%;
-    font-size: 1.2rem;
+.login-page input {
+  padding: 1rem 1.2rem;
+  font-size: 1.3rem;
+  border: 1px solid var(--color-border);
+  border-radius: 0.5rem;
+  margin-bottom: 0.5rem;
+  width: 100%;
 }
 
-@media(max-width: 450px){
-    .login-page input, .login-page button{
-        width: 80%;
-        height: 3rem;
-        font-size: 1.1rem;
-    }
+.login-page button {
+  width: 100%;
+  font-size: 1.2rem;
+}
+
+@media (max-width: 450px) {
+  .login-page input,
+  .login-page button {
+    width: 80%;
+    height: 3rem;
+    font-size: 1.1rem;
+  }
 }
