--- a/src/views/layouts/layout.ejs
+++ b/src/views/layouts/layout.ejs
@@ -10,7 +10,7 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Ebooks-Go-App</title>
+    <title>nutzread</title>
 
     <link
       rel="shortcut icon"
