--- a/src/views/partials/_header.ejs
+++ b/src/views/partials/_header.ejs
@@ -1,6 +1,6 @@
 <nav class="header-nav">
   <a href="/" class="header-title">
-    <h3>nutzread</h3>
+    <h3>booknutz</h3>
   </a>
   <ul class="nav-links">
     <% if(user == null) { %>
