--- a/src/views/books/view_book.ejs
+++ b/src/views/books/view_book.ejs
@@ -26,7 +26,7 @@
         data-name="<%= book.title %>"
         data-description="<%= book.description %>"
         data-email="<%= (user && user.email) ? user.email : null %>"
-        data-image="/img/marketplace.jpeg"
+        data-image="/img/logo.jpg"
         data-locale="auto"
       ></script>
 
