--- a/src/views/layouts/layout.ejs
+++ b/src/views/layouts/layout.ejs
@@ -14,7 +14,7 @@
 
     <link
       rel="shortcut icon"
-      href="/img/marketplace.jpeg"
+      href="/img/logo.jpg"
       type="image/x-icon"
     />
 
